# otus

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  hello.cpp
.github/workflows/: release.yml
apps/: hw12_fashion_mnist_mlp.cpp  hw2_ip_filter.cpp  hw3_allocators.cpp  hw4_ip_printer.cpp  hw5_graphics_editor.cpp  hw6_sparse_matrix.cpp  hw7_pkt_cmd_handler.cpp  hw9_async_pkt_cmd_handler.cpp
libs/: CMakeLists.txt
libs/allocator/: CMakeLists.txt  allocators.hpp  stack_allocator.hpp  stack_allocator.ipp
libs/computer_vision/: CMakeLists.txt  iclassifier.hpp
libs/computer_vision/mlp/: CMakeLists.txt  mlp_classifier.cpp  mlp_classifier.hpp
libs/custom_containers/: CMakeLists.txt  vector.hpp  vector.ipp
libs/graphics_editor/: CMakeLists.txt
libs/graphics_editor/document/: CMakeLists.txt  document_types.hpp  idocument.hpp
libs/graphics_editor/document/factory/: CMakeLists.txt  document_factory.cpp  document_factory.hpp
libs/graphics_editor/document/impl/: CMakeLists.txt  document_raw.cpp  document_raw.hpp
libs/graphics_editor/primitives/: CMakeLists.txt  iprimitive.hpp  primitive_types.hpp  primitives.hpp
libs/graphics_editor/primitives/impl/: CMakeLists.txt  circle.cpp  circle.hpp  primitive_base.cpp  primitive_base.hpp
libs/graphics_editor/primitives/properties/: colours.hpp
libs/ip_filter/: CMakeLists.txt  ip_filter.cpp  ip_filter.hpp
libs/ip_printer/: CMakeLists.txt  ip_printer.hpp
libs/pkt_cmd_handler/: CMakeLists.txt  pkt_cmd_handler.cpp  pkt_cmd_handler.hpp
libs/pkt_cmd_handler/async/: CMakeLists.txt  async.cpp  async.h
libs/pkt_cmd_handler/executors/: CMakeLists.txt  executors.cpp  executors.hpp
libs/pkt_cmd_handler/handler/: CMakeLists.txt  pkt_cmd_handler.cpp  pkt_cmd_handler.hpp
libs/pkt_cmd_handler/handler/thread/: pkt_cmd_handler_thread.cpp  pkt_cmd_handler_thread.hpp
libs/pkt_cmd_handler/handler_map/: CMakeLists.txt  handler_map.hpp
libs/pkt_cmd_handler/subscriber/: CMakeLists.txt  isubscriber.hpp
libs/pkt_cmd_handler/subscriber/factory/: subscriber_factory.cpp  subscriber_factory.hpp
libs/pkt_cmd_handler/subscriber/impl/: cout_subscriber.cpp  cout_subscriber.hpp  esubscriber.hpp  file_subscriber.cpp  file_subscriber.hpp  subscribers.hpp
libs/sparse_matrix/: CMakeLists.txt  sparse_matrix.hpp
libs/task_queue/: CMakeLists.txt  task_queue.hpp  task_queue.ipp
libs/version/: CMakeLists.txt  version.cpp  version.hpp
tests/: CMakeLists.txt
tests/libs/: CMakeLists.txt
tests/libs/allocator/: CMakeLists.txt  allocator_test.cpp
tests/libs/ip_filter/: CMakeLists.txt  ip_filter_test.cpp
tests/libs/version/: CMakeLists.txt  version_test.cpp
